@@ -9,6 +9,7 @@ EXTRA_DIST = \
 	aio.stderr.exp aio.vgtest \
 	deep_badparam.stderr.exp deep_badparam.stdout.exp deep_badparam.vgtest \
 	env.stderr.exp env.vgtest \
+	ioctl-tiocsbrk.stderr.exp ioctl-tiocsbrk.vgtest \
 	pth-supp.stderr.exp pth-supp.vgtest \
 	pth-undocumented.stderr.exp pth-undocumented.stdout.exp pth-undocumented.vgtest \
 	mkfifo.stderr.exp mkfifo.vgtest \
@@ -21,6 +22,7 @@ check_PROGRAMS = \
 	aio \
 	deep_badparam \
 	env \
+	ioctl-tiocsbrk \
 	pth-supp \
 	pth-undocumented \
 	mkfifo \
